Fixed alignment of Tittle screen

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 #title {
     background-color: #232323;
     min-height: 60vh;
-    padding: 50px;
+    padding: 0px;
 }
 
 #header {
